// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display facet item list 1`] = `
<FacetBox
  property="Reliability"
>
  <FacetHeader
    name="Reliability"
    onClick={[Function]}
    open={true}
    values={Array []}
  />
  <FacetItemsList>
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      key="Reliability"
      name={
        <span
          id="measure-overview-Reliability-name"
        >
          component_measures.domain_overview
        </span>
      }
      onClick={[Function]}
      stat={
        <BubblesIcon
          size={14}
        />
      }
      value="Reliability"
    />
    <span
      className="facet search-navigator-facet facet-category"
      key="new_code_category"
    >
      <span
        className="facet-name"
      >
        component_measures.facet_category.new_code_category
      </span>
    </span>
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      key="new_bugs"
      name={
        <span
          className="big-spacer-left"
          id="measure-new_bugs-name"
        >
          New Bugs
        </span>
      }
      onClick={[Function]}
      stat={
        <FacetMeasureValue
          measure={
            Object {
              "leak": "5",
              "metric": Object {
                "domain": "Reliability",
                "key": "new_bugs",
                "name": "New Bugs",
                "type": "INT",
              },
              "periods": Array [
                Object {
                  "index": 1,
                  "value": "5",
                },
              ],
            }
          }
        />
      }
      value="new_bugs"
    />
    <span
      className="facet search-navigator-facet facet-category"
      key="overall_category"
    >
      <span
        className="facet-name"
      >
        component_measures.facet_category.overall_category
      </span>
    </span>
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      key="bugs"
      name={
        <span
          className="big-spacer-left"
          id="measure-bugs-name"
        >
          Bugs
        </span>
      }
      onClick={[Function]}
      stat={
        <FacetMeasureValue
          measure={
            Object {
              "leak": "5",
              "metric": Object {
                "domain": "Reliability",
                "key": "bugs",
                "name": "Bugs",
                "type": "INT",
              },
              "periods": Array [
                Object {
                  "index": 1,
                  "value": "5",
                },
              ],
              "value": "5",
            }
          }
        />
      }
      value="bugs"
    />
  </FacetItemsList>
</FacetBox>
`;

exports[`should display facet item list with bugs selected 1`] = `
<FacetBox
  property="Reliability"
>
  <FacetHeader
    name="Reliability"
    onClick={[Function]}
    open={true}
    values={
      Array [
        "Bugs",
      ]
    }
  />
  <FacetItemsList>
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      key="Reliability"
      name={
        <span
          id="measure-overview-Reliability-name"
        >
          component_measures.domain_overview
        </span>
      }
      onClick={[Function]}
      stat={
        <BubblesIcon
          size={14}
        />
      }
      value="Reliability"
    />
    <span
      className="facet search-navigator-facet facet-category"
      key="new_code_category"
    >
      <span
        className="facet-name"
      >
        component_measures.facet_category.new_code_category
      </span>
    </span>
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      key="new_bugs"
      name={
        <span
          className="big-spacer-left"
          id="measure-new_bugs-name"
        >
          New Bugs
        </span>
      }
      onClick={[Function]}
      stat={
        <FacetMeasureValue
          measure={
            Object {
              "leak": "5",
              "metric": Object {
                "domain": "Reliability",
                "key": "new_bugs",
                "name": "New Bugs",
                "type": "INT",
              },
              "periods": Array [
                Object {
                  "index": 1,
                  "value": "5",
                },
              ],
            }
          }
        />
      }
      value="new_bugs"
    />
    <span
      className="facet search-navigator-facet facet-category"
      key="overall_category"
    >
      <span
        className="facet-name"
      >
        component_measures.facet_category.overall_category
      </span>
    </span>
    <FacetItem
      active={true}
      disabled={false}
      halfWidth={false}
      key="bugs"
      name={
        <span
          className="big-spacer-left"
          id="measure-bugs-name"
        >
          Bugs
        </span>
      }
      onClick={[Function]}
      stat={
        <FacetMeasureValue
          measure={
            Object {
              "leak": "5",
              "metric": Object {
                "domain": "Reliability",
                "key": "bugs",
                "name": "Bugs",
                "type": "INT",
              },
              "periods": Array [
                Object {
                  "index": 1,
                  "value": "5",
                },
              ],
              "value": "5",
            }
          }
        />
      }
      value="bugs"
    />
  </FacetItemsList>
</FacetBox>
`;
